[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bojopt"
version = "0.1.0"
description = "BOJ 코드 자동 최적화 분석기 - Python, C++, Java 코드의 성능 개선 포인트를 찾아주는 CLI 도구"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BOJOpt Team"}
]
keywords = ["boj", "baekjoon", "optimization", "code-analysis", "algorithm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
bojopt = "bojopt.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/bojopt"
Repository = "https://github.com/yourusername/bojopt"

[tool.setuptools.packages.find]
where = ["."]
include = ["bojopt*"]

[tool.setuptools.package-data]
bojopt = ["rules/*.json"]
